--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ html {
   padding-bottom: 20px;
 }
 .hidden {
-  display: none;
+  display: none !important;
 }
 #game {
   display: flex;
@@ -55,9 +55,24 @@ button {
 }
 #winnerPlayer,
 #winnerComputer {
-  width: 500px;
-  height: 500px;
-  border-color: red;
-  border-width: 3px;
+  display: flex;
+  width: 350px;
+  height: 350px;
+  border-color: black;
+  border-width: 10px;
   border-style: solid;
+  border-radius: 10%;
+  align-items: center;
+  justify-content: center;
+  font-size: xx-large;
+}
+.newGame {
+  width: 100px;
+  height: 50px;
+  border: 2px;
+  border-radius: 6px;
+  background-color: green;
+  color: white;
+  margin-left: 125px;
+  margin-top: 10px;
 }
